--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,6 @@
     <title>Taller de comienzo de proyecto</title>
   </head>
   <body>
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type='module'></script>
   </body>
 </html>
