--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
     <title>Taller de comienzo de proyecto</title>
   </head>
   <body>
+    <button id="miBoton">Un botón botonoso</button>
+    <!-- importante poner sus scripts al final del archivo -->
     <script src="js/app.js" type='module'></script>
   </body>
 </html>
