--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>Taller de comienzo de proyecto</title>
+    <title>g</title>
   </head>
   <body>
     <button id="miBoton">Un botón botonoso</button>
     <!-- importante poner sus scripts al final del archivo -->
-    <script src="js/app.js" type='module'></script>
+    <script src="js/app.js" type="module"></script>
   </body>
 </html>
